Do not replace up-to-date System Flash with Component Flash.

BUG=656058
TEST=Cases 1, 3, 5 from https://docs.google.com/document/d/1P0WslUXMUO9azLmWZ0AtQ-sGExWbHttr_2gQWDXf3MY/edit#heading=h.pe0xr0h8vcrv

Review-Url: https://codereview.chromium.org/2434103005
Cr-Commit-Position: refs/heads/master@{#428205}

Former-commit-id: 151a7690b7312bed56784b8b953cce11e03a1085