chrome/browser/component_updater/pepper_flash_component_installer.cc
@@ -129,28 +129,9 @@ void RegisterPepperFlashWithChrome(const base::FilePath& path,
 
     base::Version registered_version(base::UTF16ToUTF8(plugin.version));
 
-    // If lower version, never register.
+    // If lower or equal version, never register.
     if (registered_version.IsValid() &&
-        version.CompareTo(registered_version) < 0) {
-      return;
-    }
-
-    bool registered_is_debug_system =
-        !system_flash_path.empty() &&
-        base::FilePath::CompareEqualIgnoreCase(plugin.path.value(),
-                                               system_flash_path.value()) &&
-        chrome::IsSystemFlashScriptDebuggerPresent();
-    bool is_on_network = false;
-#if defined(OS_WIN)
-    // On Windows, component updated DLLs can't load off network drives.
-    // See crbug.com/572131 for details.
-    is_on_network = base::IsOnNetworkDrive(path);
-#endif
-    // If equal version, register iff component is not on a network drive,
-    // and the version of flash is not debug system.
-    if (registered_version.IsValid() &&
-        version.CompareTo(registered_version) == 0 &&
-        (is_on_network || registered_is_debug_system)) {
+        version.CompareTo(registered_version) <= 0) {
       return;
     }
 
