content/public/common/pepper_plugin_info.cc
@@ -18,10 +18,7 @@ PepperPluginInfo::EntryPoints::EntryPoints()
 PepperPluginInfo::PepperPluginInfo()
     : is_internal(false),
       is_out_of_process(false),
-      is_debug(false),
-      is_on_local_drive(true),
       is_external(false),
-      is_bundled(false),
       permissions(0) {
 }
 
